deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stackmap-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stackmap-api
  template: 
    metadata:
      labels:
        app: stackmap-api
        test: abc
    spec:
      imagePullSecrets:
      - name: ghcr-login-secret
      containers:
        - name: stackmap-api
          #image: api-rest:latest
          image: ghcr.io/eysteinn/stackmap-api:main
          imagePullPolicy: Always
          imagePullPolicy: Never
---

apiVersion: v1
kind: Service
metadata:
  name: stackmap-api
spec:
  type: ClusterIP
  selector:
    app: stackmap-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      #nodePort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
    #annotations:
    #haproxy.org/path-rewrite: "/"
spec:
  #ingressClassName: haproxy
  ingressClassName: traefik
  rules:
  - host: stackmap.clouds.is
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: stackmap-api
            port:
              number: 3000
---
